# LLMSQLManipulation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/llmbase/: crew.py  database.py  main.py
src/llmbase/config/: agents.yaml  tasks.yaml
src/llmbase/tools/: describeTables_tool.py  executeQuery_tool.py  listTables_tool.py
