[project]
name = "llmbase"
version = "0.1.0"
description = "llmBase using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
llmbase = "llmbase.main:run"
run_crew = "llmbase.main:run"
train = "llmbase.main:train"
replay = "llmbase.main:replay"
test = "llmbase.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
